Updated Total Records in the view

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -27,6 +27,9 @@
      </form>
   </div>  
   
+  <div>
+      <label for="totalRecords">Total Records: {{ totalRecords }} </label>
+  </div>
 
  <div>
     <p-table class="mobile-key-table" [columns]="cols" [value]="mobileKeys" [lazy]="true"
